--- a/index.html
+++ b/index.html
@@ -8,15 +8,20 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Manrope:wght@400;600;800&family=Teko:wght@400;600;700&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <!-- Magnific popup -->
+    <link rel="stylesheet" href="assets/vendor/glightboxes/css/magnific-popup.min.css">
     <!-- Fontawesome -->
     <link rel="stylesheet" href="assets/vendor/fontawesome/css/fontawesome.css">
     <!-- glightbox css -->
+    <link rel="stylesheet" href="assets/vendor/glightboxes/css/glightbox.css">
+    <link rel="stylesheet" href="assets/vendor/glightboxes/css/glightbox.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+
     <title>Portfolio-used(sass)</title>
 </head>
 <body>
 <!--==============================
-  START THE NAVBAR SECTION
+  START THE NAVBAR SECTION 01
 ===============================-->
 <nav class="navbar navbar-expand-lg navbar-dark menu shadow sticky-top">
     <div class="container">
@@ -55,7 +60,7 @@
   </nav>
 
 <!--==============================
-  START THE INTRO SECTION 
+  START THE INTRO SECTION 02
 ===============================-->
 <section id="home" class="intro-section">
   <div class="container">
@@ -80,7 +85,7 @@
       <div class="col-md-6 intros text-end">
         <div class="video-box">
           <img src="assets/images/arts/intro-section-illustration.png"  alt="video-illustration" class="img-fluid">
-          <a href="#" class="glightbox position-absolute top-50 start-50 translate-middle">
+          <a href="#"  class="popup-video glightbox position-absolute top-50 start-50 translate-middle" data-glightbox="type: video">
             <span>
               <i class="fas fa-play-circle"></i>
             </span>
@@ -94,18 +99,93 @@
   <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1440 320"><path fill="#ffffff" fill-opacity="1" d="M0,128L48,112C96,96,192,64,288,74.7C384,85,480,139,576,144C672,149,768,107,864,106.7C960,107,1056,149,1152,160C1248,171,1344,149,1392,138.7L1440,128L1440,320L1392,320C1344,320,1248,320,1152,320C1056,320,960,320,864,320C768,320,672,320,576,320C480,320,384,320,288,320C192,320,96,320,48,320L0,320Z"></path></svg>
 </section>
 
+<!--==============================
+  START THE COMPANIES SECTION 03
+===============================-->
+<section id="companies" class="companies">
+ <div class="container">
+  <div class="row text-center">
+<h4 class="fw-bold lead mb-3">Trusted by companies like</h4>
+<div class="heading-line mb-5"></div>
+<!-- =========START THE COMPANIES CONTENT ======== -->
+<div class="container">
+    <div class="row">
+        <div class="col-md-4 col-lg-2">
+            <div class="companies_logo-box shadow-sm"><img class="img-fluid" src="assets/images/companies/campany-1.png" alt="company1logo" title="company1logo"></div>
+        </div>
+        <div class="col-md-4 col-lg-2">
+            <div class="companies_logo-box shadow-sm"><img class="img-fluid" src="assets/images/companies/campany-2.png" alt="company2logo" title="company2logo"></div>
+        </div>
+        <div class="col-md-4 col-lg-2">
+            <div class="companies_logo-box shadow-sm"><img class="img-fluid" src="assets/images/companies/campany-3.png" alt="company3logo" title="company3logo"></div>
+        </div>
+        <div class="col-md-4 col-lg-2">
+            <div class="companies_logo-box shadow-sm"><img class="img-fluid" src="assets/images/companies/campany-4.png" alt="company4logo" title="company4logo"></div>
+        </div>
+        <div class="col-md-4 col-lg-2">
+            <div class="companies_logo-box shadow-sm"><img class="img-fluid" src="assets/images/companies/campany-5.png" alt="company5logo" title="company5logo"></div>
+        </div>
+        <div class="col-md-4 col-lg-2">
+            <div class="companies_logo-box shadow-sm"><img class="img-fluid" src="assets/images/companies/campany-6.png" alt="company6logo" title="company6logo"></div>
+        </div>
+    </div>
+</div>
+  </div>
+ </div>
+</section>
 
-
-  <!-- glightbox js -->
-  <!-- <script src="assets/vendor/js/glightbox.min.js"></script>
-  <script type="text/javascript">
-    const lightbox = GLightbox({
-            'href': 'https://youtu.be/iJKCj8uAHz8?si=Rq0sOCCMLqlT1awY',
-                'type': 'video',
-                'source': 'youtube', //vimeo, youtube or local
-                'width': 900,
-    });
+<!--==============================
+  START THE SERVICES SECTION 04
+===============================-->
+<section id="services" class="our-services">
+    <div class="container">
+        <div class="row text-center">
+            <h1 class="display-3 fw-bold">OUR SERVICES</h1>
+            <div class="heading-line mb-5"></div>
+        </div>
+    </div>
+    <!-- START THE DESCRIPTION CONTENT -->
+    <div class="container">
+        <div class="row my-2 py-2">
+            <div class="col-md-6 border-right">
+                <div class="bg-white p-3">
+                    <h2 class="text-capitalize fw-bold text-center">
+                        Our services range from initial design from our development to real veiw.
+                    </h2>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="bg-white text-center p-2">
+                    <p class="fw-light p-4">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laboriosam ex aliquam voluptate porro quam reiciendis voluptatum debitis architecto recusandae atque? Magnam incidunt voluptatibus commodi soluta laboriosam quidem magni maiores nihil.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+  <!-- jquery -->
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/vendor/glightboxes/js/jquery.magnific-popup.min.js"></script>
+  <script src="assets/vendor/glightboxes/js/glightbox.min.js"></script>
+  <!-- magnificPopup js -->
+  <!-- <script>
+$('.popup-video').magnificPopup({
+type:'iframe',
+});
   </script> -->
+
+<!-- glightbox js -->
+    <script type="text/javascript">
+      const lightbox = GLightbox({
+        'touchNavigation': true,
+        'href': 'https://www.youtube.com/watch?v=J9lS14nM1xg',
+        'type': 'video',
+        'source': 'youtube', //vimeo, youtube or local
+        'width': 900,
+        'autoPlayVideos': 'true',
+});
+
+    </script>
+
   <!-- bootstrap js -->
   <script src="assets/js/bootstrap.bundle.min.js"></script>
 </body>
